--- a/main.bib
+++ b/main.bib
@@ -308,6 +308,15 @@
   year = {2020},
 }
 
+@misc{social2017,
+  author = {ThoughtWorks},
+  howpublished = {\url{https://www.thoughtworks.com/en-de/radar/techniques/social-code-analysis}},
+  note = {[Online; accessed 09-10-2024]},
+  title = {{Social Code Analysis}},
+  month = {March},
+  year = {2017},
+}
+
 @article{bowen1979survey,
   author = {Bowen, John B.},
   doi = {10.1109/mc.1979.1658854},
@@ -2155,4 +2164,16 @@
   year={2022},
   publisher={IEEE},
   doi={0.1109/ACCESS.2022.3144743}
+}
+
+@article{medeiros2021can,
+  title={{Can EEG Be Adopted as a Neuroscience Reference for Assessing Software Programmers’ Cognitive Load?}},
+  author={Medeiros, J{\'u}lio and Couceiro, Ricardo and Duarte, Gon{\c{c}}alo and Dur{\~a}es, Jo{\~a}o and Castelhano, Jo{\~a}o and Duarte, Catarina and Castelo-Branco, Miguel and Madeira, Henrique and de Carvalho, Paulo and Teixeira, C{\'e}sar},
+  journal={{Sensors}},
+  volume={21},
+  number={7},
+  pages={2338},
+  year={2021},
+  publisher={MDPI},
+  doi={10.3390/s21072338}
 }
