--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -137,6 +137,11 @@
 \pitch{
   \pptQuote{helmet.jpg}{BrainMaster Technologies (USA) sells this ``\href{https://brainmaster.com/product/freedom-20r-series/}{Freedom 20R}'' EEG head set for \$31,025. A similar device you can get from \href{https://neiry.ru/about-us}{Neiry} (Russia), for 3\% of this price.}{}}
 
+\qte
+  {raul-barbosa}
+  {We propose the use of \ul{biofeedback} code highlighting techniques to provide online programmer's warnings for potentially problematic code lines that may need a second look at (to remove possible bugs).}
+  {couceiro2019spotting}
+
 The following Java code has an obvious but hard to spot functional defect:
 \par
 {\scriptsize\begin{ffcode}[columns=flexible]
@@ -155,7 +160,7 @@ public class AverageCalculator {                             // (*@\textcolor{gr
 \end{ffcode}
 }
 \par
-The ``neuro-social markup'' is on the right side of the code, as Java comments, indicating the level of \ul{brain activity} at the moment of writing the particular line of code, such as \textcolor{green}{LOW}, \textcolor{orange}{MEDIUM} or \textcolor{red}{HIGH}.
+The ``cognitive state code annotations'' are on the right side of the code, as Java comments, indicating the level of \ul{brain activity} at the moment of writing the particular line of code.
 \plush{}
 
 \qte
