--- a/main.bib
+++ b/main.bib
@@ -2177,3 +2177,13 @@
   publisher={MDPI},
   doi={10.3390/s21072338}
 }
+
+@inproceedings{couceiro2019spotting,
+  title={{Spotting Problematic Code Lines using Nonintrusive Programmers' Biofeedback}},
+  author={Couceiro, Ricardo and Barbosa, Raul and Dur{\'a}es, Jo{\'a}o and Duarte, Gon{\c{c}}alo and Castelhano, Jo{\'a}o and Duarte, Catarina and Teixeira, Cesar and Laranjeiro, Nuno and Medeiros, J{\'u}lio and Carvalho, Paulo and others},
+  booktitle={{Proceedings of the 30th International Symposium on Software Reliability Engineering (ISSRE)}},
+  pages={93--103},
+  year={2019},
+  organization={IEEE},
+  doi={10.1109/ISSRE.2019.00019}
+}
