--- a/main.bib
+++ b/main.bib
@@ -2187,3 +2187,24 @@
   organization={IEEE},
   doi={10.1109/ISSRE.2019.00019}
 }
+
+@inproceedings{smith1980software,
+  title={{A software Science Analysis of Programming Size}},
+  author={Smith, Charles P.},
+  booktitle={{Proceedings of the ACM Annual Conference}},
+  pages={179--185},
+  year={1980},
+  doi={10.1145/800176.809965}
+}
+
+@article{fitzsimmons1978review,
+  title={{A Review and Evaluation of Software Science}},
+  author={Fitzsimmons, Ann and Love, Tom},
+  journal={{ACM Computing Surveys (CSUR)}},
+  volume={10},
+  number={1},
+  pages={3--18},
+  year={1978},
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/356715.356717}
+}
