--- a/04-halstead-complexity/04-halstead-complexity.tex
+++ b/04-halstead-complexity/04-halstead-complexity.tex
@@ -47,7 +47,7 @@
 
 \pitch{
   \pptBanner{Operators and Operands}
-  ``When a program is translated from one language to another, as from FORTRAN to machine language for example, the actual operators and operands may indeed change, but both versions must still consist of combinations of operators and operands. \ul{No other category} of entities need be present.'' --- \textit{Advances in Software Science}, Maurice Halstead, Advances in Computers, Volume 18, 1979}
+  ``When a program is translated from one language to another, as from FORTRAN to machine language for example, the actual operators and operands may indeed change, but both versions must still consist of combinations of operators and operands. \ul{No other category} of entities need be present.''\par\source{halstead1979advances}}
 
 \pitch{
   \pptBanner{Length and Vocabulary}
@@ -95,6 +95,11 @@
   {bill-curtis}
   {In studying some error data provided us by Rome Air Development Center, Phil Milliman and I found Halstead's metric a \ul{remarkably accurate predictor} of delivered \ul{bugs} in a system developed with modern programming practices and tools.}
   {curtis1979}
+
+\qte
+  {../04-halstead-complexity/bailey}
+  {The authors analysis indicated that software errors were \ul{not} a linear function of program volume. It is felt that errors are a result of \ul{many other factors} besides those which make up the volume metric. Perhaps the correlation exists on a very large scale (over an entire software system).}
+  {bailey1981software}
 
 \pitch{Halstead Complexity is supported by a few tools:
   \begin{itemize}
