--- a/main.bib
+++ b/main.bib
@@ -2208,3 +2208,34 @@
   publisher={ACM New York, NY, USA},
   doi={10.1145/356715.356717}
 }
+
+@incollection{halstead1979advances,
+  title={{Advances in Software Science}},
+  author={Halstead, Maurice H.},
+  booktitle={{Advances in Computers}},
+  volume={18},
+  pages={119--172},
+  year={1979},
+  publisher={Elsevier},
+  doi={10.1016/S0065-2458(08)60583-5}
+}
+
+@inproceedings{bailey1981software,
+  title={{A software Study Using Halstead Metrics}},
+  author={Bailey, C. T. and Dingee, W. L.},
+  booktitle={{Proceedings of the Workshop/Symposium on Measurement and Evaluation of Software Quality}},
+  pages={189--197},
+  year={1981},
+  doi={10.1145/800003.807928}
+}
+
+@article{curtis1979measuring,
+  title={{Measuring the Psychological Complexity of Software Maintenance Tasks with the Halstead and McCabe metrics}},
+  author={Curtis, Bill and Sheppard, Sylvia B. and Milliman, Phil and Borst, M. A. and Love, Tom},
+  journal={{IEEE Transactions on Software Engineering}},
+  number={2},
+  pages={96--104},
+  year={1979},
+  publisher={IEEE},
+  doi={10.1109/TSE.1979.234165}
+}
