--- a/04-halstead-complexity/04-halstead-complexity.tex
+++ b/04-halstead-complexity/04-halstead-complexity.tex
@@ -82,6 +82,23 @@
   ``We have independently tested the hypothesis that the mental effort required to create a program (measured by \(E\)) is related to a person's ability to understand a program or to find bugs in existing programs. The studies of Gould and Weissman as well as our work strongly support these hypotheses.''\par
   \source{fitzsimmons1978review}}
 
+\qte
+  [Bill Curtis]
+  {bill-curtis}
+  {In the current study, the complexity metrics were more highly related to the performance of less experienced programmers. Thus, the complexity metrics may not represent the most important constructs for predicting the performance of experienced programmers. These programmers probably conceptualized programs at a level other than that of operators, operands, and basic control paths.}
+  {curtis1979measuring}
+
+\pitch{
+  \pptBanner{CC vs. Halstead Volume}
+  \begin{multicols}{2}
+  \pptPic{.95}{cc-vs-volume.png}
+  \par\columnbreak\par
+  ``From the Fig. 7, it is obvious that that the correlation between Cyclomatic Complexity and Halstead Volume is strong. The change in Cyclomatic Complexity will impact on Halstead Volume and vice versa.''
+  \par
+  \source{tashtoush2014correlation}
+  \end{multicols}}
+
+
 \pitch{
   \pptBanner{Time and Bugs Estimate}
   \begin{itemize}
@@ -91,7 +108,6 @@
   \end{itemize}}
 
 \qte
-  [Bill Curtis]
   {bill-curtis}
   {In studying some error data provided us by Rome Air Development Center, Phil Milliman and I found Halstead's metric a \ul{remarkably accurate predictor} of delivered \ul{bugs} in a system developed with modern programming practices and tools.}
   {curtis1979}
