--- a/main.bib
+++ b/main.bib
@@ -2230,7 +2230,7 @@
 }
 
 @article{curtis1979measuring,
-  title={{Measuring the Psychological Complexity of Software Maintenance Tasks with the Halstead and McCabe metrics}},
+  title={{Measuring the Psychological Complexity of Software Maintenance Tasks with the Halstead and McCabe Metrics}},
   author={Curtis, Bill and Sheppard, Sylvia B. and Milliman, Phil and Borst, M. A. and Love, Tom},
   journal={{IEEE Transactions on Software Engineering}},
   number={2},
@@ -2238,4 +2238,13 @@
   year={1979},
   publisher={IEEE},
   doi={10.1109/TSE.1979.234165}
+}
+
+@misc{tashtoush2014correlation,
+  title={{The Correlation Among Software Complexity Metrics with Case Study}},
+  author={Tashtoush, Yahya and Al-Maolegi, Mohammed and Arkok, Bassam},
+  journal={{International Journal of Advanced Computer Research}},
+  volume={4},
+  number={2},
+  year={2014}
 }
