--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -31,24 +31,24 @@
 
 \qte
   [Fred Brooks]
-  {fred-brooks.jpg}
+  {fred-brooks}
   {The total \ul{cost of maintaining} a widely used program is typically 40 percent or more of the cost of developing it}
   {brooks1982}
 
 \qte
   [Ward Cunningham]
-  {ward-cunningham.jpg}
+  {ward-cunningham}
   {Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as interest on that debt.}
   {cunningham1992}
 
 \qte
   [Paul Oman]
-  {anonymous-2.png}
+  {anonymous}
   {Before developers can claim that they are building maintainable systems, there must be some way to \ul{measure} maintainability}
   {coleman1994}
 
 \qte
-  {paper-1.png}
+  {../05-maintainability-index/paper-1}
   {The factors of software that determine or influence maintainability can be organized into a \ul{hierarchical} structure of measurable attribute. Our hierarchy serves as a taxonomic definition for software maintainability that is compatible with the 35 published works upon which it is based.}
   {oman1992metrics}
 
@@ -60,7 +60,7 @@
 \plush{
 \pptBanner{Maintainability Formula}
 \begin{multicols}{2}
-\pptPic{.8}{formula-1.png}\par
+\pptPic{.7}{formula-1.png}\par
 {\scriptsize Source: \bibentry{oman1992metrics}\par}
 \par\columnbreak\par
 ``This formula represents the product of the weighted dimensions, where each dimension is measured as the average deviation from a known value of 'goodness' for that maintainability attribute.''
@@ -68,7 +68,7 @@
 }
 
 \qte
-  {paper-2.png}
+  {../05-maintainability-index/paper-2}
   {A software maintainability model is only useful if it can provide developers and maintainers in an industrial setting with more information about the system}
   {coleman1994}
 
@@ -107,7 +107,7 @@
 
 \qte
   [Rainer Niedermayr]
-  {rainer-niedermayr.jpg}
+  {rainer-niedermayr}
   {We are convinced that Maintainability Index is \ul{nonsense}. We think that it is not sensible to reduce the maintainability of a whole software system to one single indicator.}
   {niedermayr2016}
 
@@ -115,7 +115,7 @@
 
 \qte
   [Arie van Deursen]
-  {arie-van-deursen.jpg}
+  {arie-van-deursen}
   {If you are a researcher, \ul{think twice} before using the maintainability index in your experiments. Make sure you study and fully understand the original papers published about it.}
   {deursen2014}
 
@@ -123,7 +123,7 @@
 
 \qte
   [Tim Gilboy]
-  {tim-gilboy.jpg}
+  {tim-gilboy}
   {If we're going to use the Maintainability Index we should use it to measure \ul{relative} maintainability within our project rather than use it as an \ul{absolute} metric.}
   {gilboy2022}
 
@@ -131,7 +131,7 @@
 
 \qte
   [Tja\u{s}a Heri\u{c}ko]
-  {hericko.png}
+  {../05-maintainability-index/hericko}
   {When comparing maintainability measurements from several Index variants, the perception of maintainability could be impacted by the choice of the Index variant used.}
   {hericko2023}
 
@@ -146,7 +146,7 @@
 \end{itemize}}
 
 \qte
-  {slr.png}
+  {../05-maintainability-index/slr}
   {The SLR outcome provided us with \ul{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}
   {ardito2022}
 
